--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+:root{
+    --text-primary: #111111;
+    --text-secondary: #737373;
+    --border-color: #EBEBEB;
+    --background-light: #F5F5F5;
+    --color-white: #FFFFFF;
+}
 /*CSS reset*/
 *, *::before, *::after {
     box-sizing: border-box;
 }
 * {
     margin: 0;
-}
-body {
-    min-height: 100vh;
-    line-height: 1.5;
 }
 img, picture, video, canvas, svg {
     display: block;
@@ -23,3 +27,142 @@ button, input, label {
 p, h1, h2, h3, h4, h5, h6 {
     overflow-wrap: break-word;
 }
+ul, ol {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
+    list-style: none;
+}
+
+body {
+    min-height: 100vh;
+    line-height: 1.5;
+    font-family: "Poppins", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: var(--text-primary);
+    background-color: #111111;
+}
+a{
+    text-decoration: none;
+    color: inherit;
+    transition: all 0.3s ease-in-out;
+}
+
+button{
+    cursor: pointer;
+}
+
+.container{
+    width: 100%;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media (min-width: 1280px){
+    .container{
+        max-width: 1320px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.collapse:not(.show) {
+    display: none;
+}
+
+/*Navbar*/
+.navbar{
+    padding-top: 16px;
+    padding-bottom: 16px;
+    background-color: var(--color-white);
+}
+
+@media (min-width: 768px){
+    .navbar{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+
+.navbar>.container{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.navbar .navbar-logo{
+    display: none;
+}
+
+@media (min-width: 768px){
+    .navbar .navbar-logo{
+display: block;
+    }
+}
+
+.navbar .navbar-collapse{
+    flex-grow: 1;
+    flex-basis: 100%;
+}
+
+@media (min-width: 768px){
+    .navbar .navbar-collapse{
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+}
+
+.navbar .navbar-nav{
+    margin-top: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+@media (min-width: 768px){
+    .navbar .navbar-nav{
+        margin-top: 0;
+        flex-direction: row;
+        align-items: center;
+        gap: 2rem;
+    }
+}
+
+.navbar .navbar-nav .nav-link{
+    position: relative;
+    width: 100%;
+}
+
+.navbar .navbar-nav .nav-link:before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 0;
+    background-color: var(--text-primary);
+    transition: .3s;
+}
+.navbar .navbar-nav .nav-link.active:before, .navbar .navbar-nav .nav-link:hover:before{
+    width: 100%;
+}
+
+.navbar-toggler{
+    background-color: transparent;
+    border: 1px solid transparent;
+}
+
+@media (min-width: 768px){
+    .navbar .navbar-toggler{
+        display: none;
+    }
+}
+
+
