--- a/css/style.css
+++ b/css/style.css
@@ -53,14 +53,22 @@ a{
 }
 button{
     cursor: pointer;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0;
 }
 
 .container{
     width: 100%;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 1rem;
+    padding-right: 1rem;
     margin-left: auto;
     margin-right: auto;
+}
+
+.container.small{
+    max-width: 872px;
+    /*padding: 0;*/
 }
 
 @media (min-width: 1280px){
@@ -77,8 +85,8 @@ button{
 
 /*Navbar*/
 .navbar{
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     background-color: var(--color-white);
 }
 
@@ -184,13 +192,21 @@ button{
     padding-bottom: 60px;
 }
 
+.section.bg-light-gray{
+    background-color: var(--background-light);
+}
+
 .section-header{
-    margin-bottom: 32px;
+    max-width: 872px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
     text-align: center;
 }
 
 .section-title{
     font-size: 1.5rem;
+    margin-bottom: 1rem;
 }
 
 .section-subtitle{
@@ -202,7 +218,7 @@ button{
         font-size: 2rem;
     }
     .section-header{
-        margin-bottom: 48px;
+        margin-bottom: 3rem;
     }
 }
 
@@ -210,7 +226,7 @@ button{
 .product-list{
     display: flex;
     flex-wrap: nowrap;
-    gap: 16px;
+    gap: 1rem;
     overflow: hidden;
 }
 
@@ -219,10 +235,69 @@ button{
 }
 
 .item-details{
-    margin-top: 16px;
+    margin-top: 1rem;
 }
 
 .item-price{
-    margin-top: 8px;
+    margin-top: 0.5rem;
     color: var(--text-secondary);
 }
+
+/*FAQ Section*/
+.question-list{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.question-item{
+
+    padding: 1.5rem;
+    background-color: var(--color-white);
+    border: 1px solid var(--border-color);
+    border-radius: 0.5rem;
+}
+
+.question-title{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 1.5;
+}
+
+.question-title .icon {
+    position: relative;
+    width: 14px;
+    height: 14px;
+    flex-shrink: 0;
+    background-image: url("../img/plus-btn.svg");
+    background-position: center;
+    background-size: cover;
+    transition: transform 0.3s ease;
+}
+
+/*.question-title:hover .icon{*/
+/*    transform: rotate(180deg);*/
+/*}*/
+
+.question-item.open .icon {
+    background-image: url("../img/minus-btn.svg");
+}
+
+.answer-text{
+    /*visibility: hidden;*/
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .3s ease, opacity .3s ease;
+    opacity: 0;
+    color: var(--text-secondary);
+}
+.question-item.open .answer-text {
+    margin-top: 20px;
+    overflow: visible;
+    opacity: 1;
+    /* height: auto;*/
+}
+
+
