--- a/css/style.css
+++ b/css/style.css
@@ -277,16 +277,11 @@ button{
     transition: transform 0.3s ease;
 }
 
-/*.question-title:hover .icon{*/
-/*    transform: rotate(180deg);*/
-/*}*/
-
 .question-item.open .icon {
     background-image: url("../img/minus-btn.svg");
 }
 
 .answer-text{
-    /*visibility: hidden;*/
     overflow: hidden;
     max-height: 0;
     transition: max-height .3s ease, opacity .3s ease;
@@ -297,7 +292,100 @@ button{
     margin-top: 20px;
     overflow: visible;
     opacity: 1;
-    /* height: auto;*/
 }
 
+
+/*Footer */
+footer{
+    padding-top: 3.75rem;
+    padding-bottom: 1.5rem;
+}
+
+.footer-nav{
+    margin-bottom: 3rem;
+}
+.footer-menu{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border-top: 1px solid var(--border-color);
+}
+
+.footer-menu:last-child{
+    border-bottom: 1px solid var(--border-color);
+}
+
+.footer-nav-title{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-menu .icon{
+    transition: all .3s ease;
+    transform: rotate(180deg);
+}
+
+.footer-menu.open .icon{
+    transform: rotate(0);
+}
+
+.footer-nav-list{
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height .3s ease, opacity .3s ease;
+    opacity: 0;
+}
+
+.footer-menu.open .footer-nav-list{
+    margin-top: 1rem;
+    overflow: visible;
+    opacity: 1;
+}
+
+.footer-nav-list li+li{
+    margin-top: 0.75rem;
+}
+
+.footer-link, .copyright-content{
+    color: var(--text-secondary);
+    font-size: 0.9rem;
+}
+
+.footer-link:hover, .footer-link.active{
+    color: var(--text-primary);
+}
+
+.footer-copyright, .policies-list{
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
+@media (min-width: 768px){
+    .footer-nav{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+    }
+    .footer-menu, .footer-menu:last-child{
+        border: none;
+    }
+    .footer-menu .icon{
+        display: none;
+    }
+    .footer-nav-title{
+        pointer-events: none;
+    }
+    .footer-nav-list{
+        margin-top: 1rem;
+        opacity: 1;
+        max-height: none;
+        height: auto;
+    }
+
+    .footer-copyright, .policies-list{
+        flex-direction: row;
+        gap: 2rem;
+    }
+}
 
