--- a/css/style.css
+++ b/css/style.css
@@ -79,11 +79,15 @@ button{
     }
 }
 
-.collapse:not(.show) {
-    display: none;
-}
+
 
 /*Navbar*/
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+}
 .navbar{
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -115,9 +119,30 @@ button{
     }
 }
 
+.navbar-toggler{
+    background-color: transparent;
+    border: 1px solid transparent;
+}
+
+@media (min-width: 768px){
+    .navbar .navbar-toggler{
+        display: none;
+    }
+}
+
 .navbar .navbar-collapse{
     flex-grow: 1;
     flex-basis: 100%;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: opacity .3s ease-in, max-height .3s ease-in;
+}
+
+.collapse.show {
+    /*display: none;*/
+    opacity: 1;
+    overflow: visible;
 }
 
 @media (min-width: 768px){
@@ -125,8 +150,13 @@ button{
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
+        max-height: max-content;
+        opacity: 1;
+        overflow: visible;
     }
 }
+
+
 
 .navbar .navbar-nav{
     margin-top: 1.5rem;
@@ -163,16 +193,7 @@ button{
     width: 100%;
 }
 
-.navbar-toggler{
-    background-color: transparent;
-    border: 1px solid transparent;
-}
 
-@media (min-width: 768px){
-    .navbar .navbar-toggler{
-        display: none;
-    }
-}
 
 /*Swiper Hero slider*/
 .hero{
@@ -251,7 +272,6 @@ button{
 }
 
 .question-item{
-
     padding: 1.5rem;
     background-color: var(--color-white);
     border: 1px solid var(--border-color);
@@ -264,6 +284,7 @@ button{
     justify-content: space-between;
     align-items: center;
     line-height: 1.5;
+    text-align: left;
 }
 
 .question-title .icon {
