Refactor data rendering in Product Card, add images and basic styles

--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,8 @@ button{
 @media (min-width: 1280px){
     .container{
         max-width: 1320px;
-        padding-left: 0;
-        padding-right: 0;
+        /*padding-left: 0;*/
+        /*padding-right: 0;*/
     }
 }
 
@@ -262,6 +262,50 @@ header {
 .item-price{
     margin-top: 0.5rem;
     color: var(--text-secondary);
+}
+
+/*Product card Section*/
+.product-card{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.product-card .product-images{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.product-card .main-image img{
+    max-width: 536px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    border-radius: 0.5rem;
+}
+
+.product-card .product-gallery{
+    display: flex;
+    gap: 1rem;
+}
+
+.product-card .product-gallery.hidden{
+    display: none;
+}
+
+.product-card .product-gallery img{
+    max-width: 88px;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
+    border-radius: 0.5rem;
+}
+
+.product-card .product-gallery.hide{
+    display: none;
 }
 
 /*FAQ Section*/
