--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,35 @@ button{
     }
 }
 
+/*Utility classes*/
+h1, .h1{
+    font-size: 2.75rem;
+    line-height: 1;
+}
+h2, .h2{
+    font-size: 2rem;
+    line-height: 1.2;
+}
+.text-large{
+    font-size: 1rem;
+}
+.text-medium{
+    font-size: .9rem;
+}
+.text-secondary{
+    color: var(--text-secondary);
+}
+
+.btn{
+    padding: 1rem 2rem;
+    height: 56px;
+    border-radius: 0.5rem;
+    border: none;
+}
+.btn-black{
+    background-color: var(--text-primary);
+    color: var(--color-white);
+}
 
 
 /*Navbar*/
@@ -226,13 +255,10 @@ header {
 }
 
 .section-title{
-    font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
-.section-subtitle{
-    color: var(--text-secondary);
-}
+
 
 @media (min-width: 768px){
     .section-title{
@@ -258,11 +284,10 @@ header {
 .item-details{
     margin-top: 1rem;
 }
-
-.item-price{
+.item-details>*+*{
     margin-top: 0.5rem;
-    color: var(--text-secondary);
 }
+
 
 /*Product card Section*/
 .product-card{
@@ -271,10 +296,27 @@ header {
     gap: 1.5rem;
 }
 
+
 .product-card .product-images{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    flex-shrink: 0;
+}
+
+.product-card .main-image{
+    position: relative;
+}
+
+.product-card .main-image .badge{
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    padding: 0.5rem;
+    display: flex;
+    gap: 0.25rem;
+    background-color: var(--color-white);
+    text-transform: capitalize;
 }
 
 .product-card .main-image img{
@@ -289,10 +331,28 @@ header {
 .product-card .product-gallery{
     display: flex;
     gap: 1rem;
+    overflow: hidden;
 }
 
 .product-card .product-gallery.hidden{
     display: none;
+}
+
+.product-card .product-gallery .image-container{
+    position: relative;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    flex-shrink: 0;
+}
+
+.product-card .product-gallery .image-container.active::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(17, 17, 17, 0.2);
 }
 
 .product-card .product-gallery img{
@@ -301,11 +361,82 @@ header {
     height: auto;
     object-fit: cover;
     aspect-ratio: 1 / 1;
-    border-radius: 0.5rem;
 }
 
-.product-card .product-gallery.hide{
-    display: none;
+.product-info>*+*{
+    margin-top: 1.5rem;
+}
+
+.product-info .product-price{
+    margin-top: 0.75rem;
+    color: var(--text-secondary);
+}
+
+.product-info .color-options{
+    display: flex;
+    gap: 0.5rem;
+}
+
+.product-info .color-options .color-button{
+    width: 88px;
+    height: 88px;
+    border-radius: 0.5rem;
+    border: 1px solid transparent;
+    overflow: hidden;
+}
+
+.product-info .color-options .color-button.active{
+    border-color: var(--text-primary);
+}
+
+.product-info .color-options .color-button img{
+    width: 100%;
+    height: auto;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+}
+
+.product-info .size-options .grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 0.5rem;
+}
+
+.product-info .size-options .grid .size-button{
+    padding: 1rem;
+    height: 52px;
+    font-size: 0.85rem;
+    border-radius: 0.5rem;
+    border: 1px solid var(--border-color);
+    background-color: var(--color-white);
+}
+
+.product-info .size-options .grid .size-button.active{
+    border-color: var(--text-primary);
+}
+
+.product-info .add-to-cart{
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .product-card{
+        flex-direction: row;
+        gap: 3.75rem;
+    }
+    .product-card .product-images{
+        flex-direction: row-reverse;
+        gap: 1.5rem;
+    }
+
+    .product-card .product-gallery{
+        flex-direction: column;
+        gap: 1.5rem;
+    }
+
+    .product-info>*+*{
+        margin-top: 2rem;
+    }
 }
 
 /*FAQ Section*/
@@ -336,14 +467,14 @@ header {
     width: 14px;
     height: 14px;
     flex-shrink: 0;
-    background-image: url("../img/plus-btn.svg");
+    background-image: url("../img/icons/plus-btn.svg");
     background-position: center;
     background-size: cover;
     transition: transform 0.3s ease;
 }
 
 .question-item.open .icon {
-    background-image: url("../img/minus-btn.svg");
+    background-image: url("../img/icons/minus-btn.svg");
 }
 
 .answer-text{
@@ -351,7 +482,6 @@ header {
     max-height: 0;
     transition: max-height .3s ease, opacity .3s ease;
     opacity: 0;
-    color: var(--text-secondary);
 }
 .question-item.open .answer-text {
     margin-top: 20px;
