--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ header.hidden{
     width: 100%;
     height: 100%;
 }
-.hero-slider{
+.hero-slider.swiper{
     --swiper-pagination-color: #fff;
     --swiper-pagination-bullet-width: 20px;
     --swiper-pagination-bullet-height: 6px;
@@ -372,22 +372,35 @@ header.hidden{
 }
 
 /*Featured featured Section*/
-.product-list{
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 1rem;
-    overflow: hidden;
+@media (max-width: 1024px){
+    .swiper.collection-slider .swiper-slide{
+        width: auto;
+    }
+}
+@media (max-width: 361px){
+    .swiper.collection-slider .swiper-slide{
+        width: 90%;
+    }
 }
 
-.product-list .product-item{
-    flex-shrink: 0;
+@media (max-width: 768px){
+    .swiper.collection-slider .swiper-button-next,
+    .swiper.collection-slider .swiper-button-prev {
+        display: none;
+    }
 }
 
-.item-details{
+.featured-collection .item-details{
     margin-top: 1rem;
 }
-.item-details>*+*{
+.featured-collection .item-details>*+*{
     margin-top: 0.5rem;
+}
+
+.featured-collection .item-thumb img{
+    border-radius: 0.5rem;
+    object-fit: cover;
+    aspect-ratio: 1 / 1;
 }
 
 
