--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,9 @@ h2, .h2{
     }
 
 }
+.uppercase{
+    text-transform: uppercase;
+}
 .text-large{
     font-size: 1rem;
 }
@@ -389,9 +392,6 @@ header.hidden{
 .featured-collection .slider-container{
     position: relative;
 }
-.swiper.collection-slider{
-    /*position: relative;*/
-}
 .featured-collection .swiper-button-next-custom,
 .featured-collection .swiper-button-prev-custom{
     width: 40px;
@@ -661,6 +661,52 @@ header.hidden{
     opacity: 1;
 }
 
+/*Contact Form*/
+.contact-form .grid-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+}
+
+.form-group{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.form-group.full{
+    grid-column: 1 / -1;
+}
+
+.form-group input,
+.form-group textarea {
+    padding: 1rem;
+    border: 1px solid var(--border-color);
+    border-radius: 0.5rem;
+}
+.form-group textarea{
+    min-height: 150px;
+    resize: vertical;
+}
+
+.form-submit{
+    text-align: center;
+}
+
+.form-submit .btn{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    width: 120px;
+}
+
+@media (min-width: 768px) {
+    .contact-form .grid-container{
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
 
 /*Footer */
 footer{
