--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ button{
 h1, .h1{
     font-size: 1.9rem;
     line-height: 1.2;
+    font-weight: 700;
 }
 h2, .h2{
     font-size: 1.5rem;
@@ -802,3 +803,76 @@ footer{
     }
 }
 
+/*Modal*/
+.modal{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(17, 17, 17, 0.8);
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+.modal-container{
+    margin-left: 1rem;
+    margin-right: 1rem;
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    border-radius: 1rem;
+}
+
+.modal-close{
+    position: absolute;
+    top: 16px;
+    right: 16px;
+    width: 40px;
+    height: 40px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--border-color);
+}
+
+.modal-content{
+    background-color: #FFFFFF;
+    padding: 60px 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
+.modal-header>*+*, .modal-form>*+*{
+    margin-top: 1rem;
+}
+
+.modal-form button{
+    width: 100%;
+}
+
+.modal-img{
+    display: none;
+}
+
+@media (min-width: 768px){
+    .modal-container{
+        max-width: 870px;
+    }
+    .modal-content{
+        padding: 60px;
+    }
+    .modal-img{
+        display: block;
+        max-width: 350px;
+    }
+    .modal-img img{
+        height: 100%;
+        object-fit: cover;
+    }
+}
