--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ header {
     right: 0;
     background-color: var(--color-white);
     transition: transform 0.3s ease;
-    z-index: 1000;
+    z-index: 999;
 }
 header.hidden{
     transform: translateY(-100%);
@@ -152,7 +152,6 @@ header.hidden{
 .navbar{
     padding-top: 1rem;
     padding-bottom: 1rem;
-
 }
 
 @media (min-width: 768px){
@@ -191,43 +190,33 @@ header.hidden{
     }
 }
 
-.navbar .navbar-collapse{
+.navbar .navbar-nav{
     flex-grow: 1;
     flex-basis: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     max-height: 0;
     opacity: 0;
     overflow: hidden;
     transition: opacity .3s ease-in, max-height .3s ease-in;
 }
 
-.collapse.show {
+.navbar-nav.show {
     /*display: none;*/
+    margin-top: 1.5rem;
     opacity: 1;
     overflow: visible;
 }
 
 @media (min-width: 768px){
-    .navbar .navbar-collapse{
+    .navbar .navbar-nav{
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
         max-height: max-content;
         opacity: 1;
         overflow: visible;
-    }
-}
-
-
-
-.navbar .navbar-nav{
-    margin-top: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-@media (min-width: 768px){
-    .navbar .navbar-nav{
         margin-top: 0;
         flex-direction: row;
         align-items: center;
