--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ h1, .h1{
     font-size: 1.9rem;
     line-height: 1.2;
     font-weight: 700;
+    text-transform: uppercase;
 }
 h2, .h2{
     font-size: 1.5rem;
@@ -100,9 +101,7 @@ h2, .h2{
     }
 
 }
-.uppercase{
-    text-transform: uppercase;
-}
+
 .text-large{
     font-size: 1rem;
 }
@@ -127,11 +126,11 @@ h2, .h2{
 .btn-black:hover{
     background-color: var(--text-secondary);
 }
-.btn-white{
+.btn-light{
     background-color: var(--color-white);
     color: var(--text-primary);
 }
-.btn-white:hover{
+.btn-light:hover{
     background-color: #CACACB;
 }
 
@@ -149,19 +148,19 @@ header {
 header.hidden{
     transform: translateY(-100%);
 }
-.navbar{
+.nav{
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
 
 @media (min-width: 768px){
-    .navbar{
+    .nav{
         padding-top: 30px;
         padding-bottom: 30px;
     }
 }
 
-.navbar>.container{
+.nav>.container{
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -169,28 +168,28 @@ header.hidden{
     flex-wrap: wrap;
 }
 
-.navbar .navbar-logo{
+.nav .nav-logo{
     display: none;
 }
 
 @media (min-width: 768px){
-    .navbar .navbar-logo{
+    .nav .nav-logo{
         display: block;
     }
 }
 
-.navbar-toggler{
+.nav-toggler{
     background-color: transparent;
     border: 1px solid transparent;
 }
 
 @media (min-width: 768px){
-    .navbar .navbar-toggler{
+    .nav .nav-toggler{
         display: none;
     }
 }
 
-.navbar .navbar-nav{
+.nav .nav-list{
     flex-grow: 1;
     flex-basis: 100%;
     display: flex;
@@ -202,7 +201,7 @@ header.hidden{
     transition: opacity .3s ease-in, max-height .3s ease-in;
 }
 
-.navbar-nav.show {
+.nav.show .nav-list {
     /*display: none;*/
     margin-top: 1.5rem;
     opacity: 1;
@@ -210,7 +209,7 @@ header.hidden{
 }
 
 @media (min-width: 768px){
-    .navbar .navbar-nav{
+    .nav .nav-list{
         position: absolute;
         left: 50%;
         transform: translateX(-50%);
@@ -224,12 +223,12 @@ header.hidden{
     }
 }
 
-.navbar .navbar-nav .nav-link{
+.nav .nav-list .nav-link{
     position: relative;
     width: 100%;
 }
 
-.navbar .navbar-nav .nav-link:before{
+.nav .nav-list .nav-link:before{
     content: "";
     position: absolute;
     bottom: 0;
@@ -239,7 +238,7 @@ header.hidden{
     background-color: var(--text-primary);
     transition: .3s;
 }
-.navbar .navbar-nav .nav-link.active:before, .navbar .navbar-nav .nav-link:hover:before{
+.nav .nav-list .nav-link.active:before, .nav .nav-list .nav-link:hover:before{
     width: 100%;
 }
 
@@ -314,11 +313,11 @@ header.hidden{
     margin-top: 2rem;
 }
 
-.hero .inner-container{
+.hero .hero-text{
     color: var(--color-white);
 }
 
-.hero .inner-container> * + *{
+.hero .hero-text> * + *{
     margin-top: 1rem;
 }
 
@@ -815,7 +814,7 @@ footer{
     border-radius: 1rem;
 }
 
-.modal-close{
+.modal-close-btn{
     position: absolute;
     top: 16px;
     right: 16px;
