--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a{
 }
 button{
     cursor: pointer;
-    color: inherit;
+    color: var(--text-primary);
     background-color: transparent;
     border: 1px solid transparent;
     padding: 0;
